# NexusQuant

./: .env.example  .gitignore  README.md  pytest.ini  run.py
services/data_platform/: pyproject.toml
services/data_platform/src/data_platform/: __init__.py  cache_keys.py  config.py  container.py  domain.py  main.py  migrations.py  security.py
services/data_platform/src/data_platform/api/: __init__.py  controller.py  dto.py
services/data_platform/src/data_platform/db/: __init__.py  models.py
services/data_platform/src/data_platform/events/: __init__.py  publisher.py  schemas.py
services/data_platform/src/data_platform/repositories/: __init__.py  artifacts.py  lineage.py  read_models.py
services/data_platform/src/data_platform/services/: __init__.py  indexing.py  queries.py
services/data_platform/tests/: conftest.py  test_api.py  test_cache.py  test_indexing.py  test_repositories.py
services/event_fabric/: pyproject.toml
services/event_fabric/src/event_fabric/: __init__.py  config.py  container.py  main.py  security.py
services/event_fabric/src/event_fabric/api/: __init__.py  controller.py  dto.py
services/event_fabric/src/event_fabric/db/: __init__.py  models.py  session.py
services/event_fabric/src/event_fabric/repositories/: __init__.py  event_store.py
services/event_fabric/src/event_fabric/services/: __init__.py  publisher.py  replay.py  subscriber.py
services/event_fabric/src/event_fabric/ws/: __init__.py  gateway.py
services/event_fabric/tests/: conftest.py  test_api.py  test_publisher.py  test_replay.py
services/market_intelligence/: pyproject.toml
services/market_intelligence/src/market_intelligence/: __init__.py  config.py  container.py  main.py  migrations.py  security.py
services/market_intelligence/src/market_intelligence/api/: __init__.py  controller.py  dto.py
services/market_intelligence/src/market_intelligence/db/: __init__.py  models.py
services/market_intelligence/src/market_intelligence/domain/: __init__.py  calendar.py  candles.py  corporate_actions.py  instruments.py  quality.py  regime.py  ticks.py
services/market_intelligence/src/market_intelligence/events/: __init__.py  schemas.py
services/market_intelligence/src/market_intelligence/ingestion/: __init__.py  aggregator.py  dhan.py  normalizer.py  pipeline.py  quality.py  validator.py  vendor.py
services/market_intelligence/src/market_intelligence/repositories/: __init__.py  instruments.py  market_data.py  quality.py  reference.py
services/market_intelligence/src/market_intelligence/services/: __init__.py  instruments.py  queries.py  reference.py  replay.py
services/market_intelligence/src/market_intelligence/ws/: __init__.py  gateway.py
services/market_intelligence/tests/: conftest.py  test_aggregator.py  test_api.py  test_calendar.py  test_corporate_actions.py  test_dhan.py  test_pipeline.py  test_quality.py  test_reference_api.py  test_regime.py  test_validator.py
services/research_os/: pyproject.toml
services/research_os/src/research_os/: __init__.py  config.py  container.py  main.py  migrations.py  security.py
services/research_os/src/research_os/api/: __init__.py  controller.py  dto.py
services/research_os/src/research_os/db/: __init__.py  models.py
services/research_os/src/research_os/domain/: __init__.py  errors.py  lifecycle.py  vocabulary.py
services/research_os/src/research_os/events/: __init__.py  schemas.py
services/research_os/tests/: conftest.py  test_api.py  test_lifecycle.py  test_services.py
(+116 files in other folders)
