[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nexus-research-os"
version = "0.1.0"
description = "SPEC-007 — Research Operating System: governed research lifecycle, projects, hypotheses, experiments, reviews, promotion."
requires-python = ">=3.11"
dependencies = [
    "nexus-shared",
    "nexus-platform",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6,<3",
    "pydantic-settings>=2.2",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "aiosqlite>=0.20",
    "httpx>=0.27",
    "python-jose[cryptography]>=3.3",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "httpx>=0.27"]

[tool.hatch.build.targets.wheel]
packages = ["src/research_os"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
